<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    tools:context=".ui.RegisterActivity">

    <!-- Navigation Menu (LinearLayout for Logo, Welcome, and Icons) -->
    <LinearLayout
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFA0BC"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"> <!-- Adjusted marginTop for spacing -->

        <!-- Welcome Text -->
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="WELCOME"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegisterSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kindly fill in this form to register."
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter full name"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter surname"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter username"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter email"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Repeat password"
        android:inputType="textPassword"
        android:background="#FFC0CB"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Register"
        android:backgroundTint="#FF69B4"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:indeterminateTint="#FF69B4"
        app:layout_constraintBottom_toBottomOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintTop_toTopOf="@id/btnRegister" />

    <!-- Register link -->

    <!-- Instead of tvRegister (ambiguous), rename to tvLogin -->
    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Already have an account? "
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="#FF69B4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvLoginRedirect"
        app:layout_constraintTop_toTopOf="@id/tvLoginRedirect" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="172dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRegisterTitle"
        app:layout_constraintTop_toBottomOf="@+id/navigation_menu"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/official_logo"
        tools:layout_editor_absoluteX="99dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
